@@ -173,7 +173,7 @@ public class RegionController extends BaseController {
 				e.printStackTrace();
 			}
 		}
-		return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new Long(0));
+		return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Long.valueOf(0));
 	}
 
 }
