@@ -57,7 +57,7 @@ public class DataFrameItisCodeService extends BaseService {
             return dataFrameItisCodeId;
         } catch (SQLException e) {
             e.printStackTrace();
-            return new Long(0);
+            return Long.valueOf(0);
         } finally {
             try {
                 // close prepared statement
