@@ -78,6 +78,6 @@ public class NodeXYService extends BaseService {
                 e.printStackTrace();
             }
         }
-        return new Long(0);
+        return Long.valueOf(0);
     }
 }
